<resources>
    <string name="app_name">Turany Tour Guide</string>
    <string name="welcome">Hi, \nchoose your activity \n in our city!</string>
    <string name="culture">Culture</string>
    <string name="sport_hiking">Sport, Hiking</string>
    <string name="category_museum">Museum</string>
    <string name="events">Events</string>
    <string name="list_item_name">Historical skiing</string>
    <string name="list_item_description">Explore history of skiing</string>
    <string name="restaurants">Restaurants</string>
    <string name="list_item_stars">5stars</string>
    <string name="sports_and_hiking">Sports and Hiking</string>
    <string name="local_museum">Local Museum</string>
    <string name="events_label">Events</string>
    <string name="restaurants_label">Restaurants</string>
    <string name="restaurant_one">Restaurant e50</string>
    <string name="restaurant_one_description">https://www.facebook.com/e50turany</string>
    <string name="restaurant_two">PIZZA CAFFE</string>
    <string name="restaurant_two_description">http://pizzacaffe.webnode.sk/</string>
    <string name="restaurant_three">Restaurant u Grofa</string>
    <string name="restaurant_three_description">http://turany.sk/ubytov/grof/grof_sk.html</string>
    <string name="restaurant_four">Tea room - ESSO396</string>
    <string name="restaurant_four_description">Zeleznicna, 396</string>
    <string name="stars_four">4 STARS</string>
    <string name="stars_three">3 STARS</string>
    <string name="events_one">Fishing party</string>
    <string name="events_two">The run to the chalet</string>
    <string name="events_three">Zumba</string>
    <string name="events_four">Turany Day</string>
    <string name="events_five">Health run</string>
    <string name="events_six">Culture Day</string>
    <string name="events_seven">Mikulas Sunday</string>
    <string name="events_eight">Silvester with fireworks</string>
    <string name="events_one_d">Every year</string>
    <string name="events_two_d">Every year</string>
    <string name="events_three_d">Check the dates online</string>
    <string name="events_four_d">2nd year</string>
    <string name="events_every_year">Every year</string>
    <string name="sport_one">Floorball Club Turany</string>
    <string name="sport_two">Chleb Chalet</string>
    <string name="sport_three">Zumba</string>
    <string name="sport_four">Radioclun OM3KHE</string>
    <string name="sport_five">Health run</string>
    <string name="sport_six">Dog Club</string>
    <string name="sport_seven">MŠK Turany - Football club</string>
    <string name="sport_eight">News</string>
    <string name="sport_one_d">fbkturany@gmail.com</string>
    <string name="sport_two_d">http://www.chleb.sk/</string>
    <string name="sport_three_d">Check the dates online</string>
    <string name="sport_four_d">http://www.om3khe.sk/</string>
    <string name="sport_five_d">Every year</string>
    <string name="sport_six_d">http://www.kkturany.wbl.sk/</string>
    <string name="sport_seven_d">http://turany.sk/msk/msk.html</string>
    <string name="sport_eight_d">http://turany.sk/spor_sk.html</string>
    <string name="stars_five">5 STARS</string>
    <string name="museum_one">The night in museum</string>
    <string name="museum_two">Exposition of 70 anniversary of SNP</string>
    <string name="museum_three">The night in museum</string>
    <string name="museum_four">The night in museum</string>
    <string name="museum_five">Nature exposition</string>
    <string name="museum_one_d">19.5.2016</string>
    <string name="museum_two_d">11.9.2014</string>
    <string name="museum_three_d">16.5.2015</string>
    <string name="museum_four_d">17.5.2014</string>
    <string name="museum_five_d">20.10.2011</string>
</resources>
