<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/cardViewPlay"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/image"
            style="@style/CardViewImagePlaying"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/list_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Nunito"
                android:paddingBottom="5dp"
                android:text="@string/list_item_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/list_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_description"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/list_item_stars"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/list_item_stars"
            android:textSize="15sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>