<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e9ff"
    tools:context="com.example.android.turanytourguide.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/scroll_view_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:paddingBottom="15dp"
                android:text="@string/welcome"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/cardViewShare"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <LinearLayout
                        style="@style/shareCardViewLinearLayout"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/sports"
                            style="@style/iconCardViewMenu"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/zero"
                            android:src="@drawable/sports" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.7"
                            android:fontFamily="Nunito"
                            android:gravity="center"
                            android:text="@string/sport_hiking"
                            android:textSize="16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/cardViewShare"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <LinearLayout
                        style="@style/shareCardViewLinearLayout"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/museum"
                            style="@style/iconCardViewMenu"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/zero"
                            android:src="@drawable/museum" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.7"
                            android:fontFamily="Nunito"
                            android:gravity="center"
                            android:text="@string/category_museum"
                            android:textSize="16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    style="@style/cardViewShare"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <LinearLayout
                        style="@style/shareCardViewLinearLayout"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/events"
                            style="@style/iconCardViewMenu"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/zero"
                            android:src="@drawable/events" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.7"
                            android:fontFamily="Nunito"
                            android:gravity="center"
                            android:text="@string/events"
                            android:textSize="16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/cardViewShare"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <LinearLayout
                        style="@style/shareCardViewLinearLayout"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/restaurants"
                            style="@style/iconCardViewMenu"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/zero"
                            android:src="@drawable/restaurants" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.7"
                            android:fontFamily="Nunito"
                            android:gravity="center"
                            android:text="@string/restaurants"
                            android:textSize="16sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
